libs/extractor/src/snapshots/extractor__tests__style_order_coverage_additional-4.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Box} from '@devup-ui/core'\n<Box styleOrder={a ? 1 : 2} bg={[\"red\", \"blue\"][idx]} />\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: None,
                style_order: Some(
                    1,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: None,
                style_order: Some(
                    2,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: Some(
                    1,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: Some(
                    2,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupValue0, __devupChoice0) => <div className={__devupValue0 ? {\n\t\"0\": \"a\",\n\t\"1\": \"b\"\n}[__devupChoice0?.[\"0\"]] || \"\" : {\n\t\"0\": \"c\",\n\t\"1\": \"d\"\n}[__devupChoice0?.[\"0\"]] || \"\"} />)(a, [[\"0\"], [\"1\"]][idx]);\n",
}
