libs/extractor/src/snapshots/extractor__tests__style_prop_merge.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\nlet color = \"red\";\n<Box style={{ padding: 10 }} bg={color} />\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "background",
                level: 0,
                identifier: "__devupSpread1",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\nlet color = \"red\";\n((__devupSpread0, __devupSpread1) => <div className=\"OHcs8svt43gl_2l3at\" style={{\n\t...{ \"---SUHadr7e43kia0ncome-bx\": __devupSpread1 },\n\t...__devupSpread0\n}} />)({ padding: 10 }, color);\n",
}
