libs/extractor/src/snapshots/extractor__tests__style_results_read_as_values.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(output)"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "animation",
                value: "KHasb_ywya7lgzf8tc 2s",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "animation",
                value: "KHasb_ywya7lgzf8tc 3s",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "animation",
                value: "KHasb_ywya7lgzf8tc 5s",
                level: 0,
                selector: Some(
                    Global(
                        "body",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "animation",
                value: "KHch95dk0jofy9eoyu 1s",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "animation",
                value: "KHch95dk0jofy9eoyu 4s",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "animation-name",
                value: "KHch95dk0jofy9eoyu",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "animation-name",
                value: "KHch95dk0jofy9eoyu",
                level: 0,
                selector: Some(
                    Global(
                        "html",
                        "test.tsx",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Keyframes(
            ExtractKeyframes {
                keyframes: {
                    "from": [
                        ExtractStaticStyle {
                            property: "left",
                            value: "0",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                },
            },
        ),
        Keyframes(
            ExtractKeyframes {
                keyframes: {
                    "from": [
                        ExtractStaticStyle {
                            property: "opacity",
                            value: "0",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                },
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui-0.css\";\nimport { Global } from \"@devup-ui/react/compat\";\nconst fadeIn = \"KHch95dk0jofy9eoyu\";\nconst slide = \"KHasb_ywya7lgzf8tc\";\nconst card = \"FLtest_ptsx-OLpadding-v4px\";\nexport const a = \"FLtest_ptsx-OHc0mtwrb_b1j0wztz FLtest_ptsx-OHdeb8aima9btm2em5\";\nexport const b = \"FLtest_ptsx-OLpadding-v4px FLtest_ptsx-OLmargin-v4px\";\nexport const c = \"FLtest_ptsx-OHbjk8bps2ju7slrs5\";\nexport const d = <div className=\"FLtest_ptsx-OHc0mtwrb_b1j0wztz FLtest_ptsx-OHanxr0rln7aoiw7gc\" />;\nexport const E = ({ style, className, ...rest }) => <div {...rest} className={[\"FLtest_ptsx-OHdptm6kbkoyj5635b\", className].filter(Boolean).join(\" \")} style={style} />;\n;\nexport const g = <Global />;\n",
}
