libs/extractor/src/snapshots/extractor__tests__style_variables-11.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr\"import {Box} from '@devup-ui/core'\n        <Box styleVars={{...styleVars}} />\n                \",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "((__devupSpread0) => <div style={{ ...__devupSpread0 }} />)({\n\t__proto__: null,\n\t...styleVars\n});\n",
}
